--- a/src/components/viewerComponents/viewerComponents.css
+++ b/src/components/viewerComponents/viewerComponents.css
@@ -1,3 +1,40 @@
-.navbar{
+p {
+  font-size: medium;
+}
+
+.navbar {
   height: 50px;
+  width: 100vw;
+  margin: auto;
+}
+
+#header-wrapper {
+  width: 100vw;
+  height: 80px;
+  background-color: navy;
+  color: white;
+  display: flex;
+  align-items: center;
+  padding-left: 20px;
+}
+
+#toggle {
+  cursor: pointer;
+  color: black;
+  font-size: 60px;
+  margin-left: 20px;
+  background: transparent;
+  border: none;
+  padding: 10px;
+}
+
+.sidebar {
+  height: 100vh;
+  padding-left: 20px;
+  background-color: #16181f;
+  color: white;
+  width: 500px;
+  position: absolute;
+  top: 50px;
+  left: 0px;
 }
