--- a/src/viewer.css
+++ b/src/viewer.css
@@ -18,7 +18,7 @@
   
   .textLayer span,
   .textLayer br {
-    color: darkblue;
+    color: transparent;
     position: absolute;
     white-space: pre;
     cursor: text;
